<resources>
    <string name="app_name">MoviePlace</string>
    <string name="login">Login</string>
    <string name="please_type_your_username">⠀Please type your email</string>
    <string name="please_type_your_password">⠀Please type your password</string>
    <string name="forgot_password">⠀Forgot Password?</string>
    <string name="register">Register</string>
    <string name="full_name">⠀Full Name</string>
    <string name="email">⠀Email</string>
    <string name="password">⠀Password</string>
    <string name="username">⠀Username</string>
    <string name="repeat_password">⠀Repeat Password</string>
    <string name="phone_number">⠀Phone Number</string>
    <string name="date_of_birth">⠀Date of Birth</string>
    <string name="register_page_logo">Register Page Logo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="login_ico">login ico</string>
    <string name="login_background_image">login background image</string>
    <string name="logo">logo</string>
    <string name="facebook_register">facebook_register</string>
    <string name="google_register">google_register</string>
    <string name="twitter_register">twitter_register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with_account">Login with Account</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_movie">Add movie</string>
    <string name="movie_image">Movie Image</string>
    <string name="user_logo">user_logo</string>
    <string name="logout_icon">logout_icon</string>
    <string name="full_name_">Full Name</string>
    <string name="date_of_birth_">Date of birth:</string>
    <string name="_12_10_2000">12/10/2000</string>
    <string name="email_">Email:</string>
    <string name="test_mail_ru">test@mail.ru</string>
    <string name="phone_number_">Phone number:</string>
    <string name="_098556633">098556633</string>
    <string name="gender_">Gender:</string>
    <string name="male_">Male</string>
    <string name="role_">Role:</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="movies">MOVIES</string>
    <string name="movie_image_">Movie Image</string>
    <string name="budget">Budget:</string>
    <string name="name">Name:</string>
    <string name="created_date">Created date:</string>
    <string name="start_date">Start date:</string>
    <string name="producer">Producer:</string>
    <string name="movie_length">Movie length:</string>
    <string name="category">Category:</string>
    <string name="company">Company:</string>
    <string name="country">Country:</string>
    <string name="actors">ACTORS</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="categories">Categories</string>
    <string name="companies">Companies</string>
    <string name="add_actor">Add Actor</string>
    <string name="surname">Surname</string>
    <string name="name_">Name</string>
    <string name="country_">Country</string>
    <string name="save_actor">Save actor</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category name</string>
    <string name="add">Add</string>
    <string name="add_company">Add Company</string>
    <string name="company_name">Company name</string>
    <string name="delete">Delete</string>
</resources>