<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@drawable/back_image"
        android:contentDescription="@string/login_background_image" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MyPageFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="ExtraText,UselessParent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/user_logo"
                android:src="@drawable/user_logo"
                app:tint="#0C1E9F" />

            <TextView
                android:id="@+id/my_page_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_"
                android:textColor="#0C1E9F"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/date_of_birth_"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/my_page_date_of_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_12_10_2000"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/email_"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/my_page_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_mail_ru"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/phone_number_"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/my_page_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_098556633"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/gender_"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/my_page_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/role_"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/my_page_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_page_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/logout_icon"
                    android:src="@drawable/log_out_"
                    app:tint="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/logout"
                    android:textColor="#000"
                    android:textSize="25sp" />
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</RelativeLayout>
