<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@drawable/back_image"
        android:contentDescription="@string/login_background_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/general_logo"
                android:layout_width="100dp"
                android:layout_height="115dp"
                android:layout_gravity="top"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/movies_icon"
                app:tint="#3853A3"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#7A7777"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="8"
            android:text="@string/movies"
            android:textColor="#3853A3"
            android:textSize="45sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reg_full_name"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:alpha="0.5"
            android:autofillHints=""
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/ic_person_username_edit_text"
            android:drawableLeft="@drawable/ic_person_username_edit_text"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:alpha="0.5"
            android:autofillHints=""
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/ic_email_edit_text"
            android:drawableLeft="@drawable/ic_email_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/reg_username"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:alpha="0.5"
            android:autofillHints=""
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/ic_person_username_edit_text"
            android:drawableLeft="@drawable/ic_person_username_edit_text"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:alpha="0.5"
            android:autofillHints=""
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/ic_lock_edit_text"
            android:drawableLeft="@drawable/ic_lock_edit_text"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/reg_rep_pass"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:alpha="0.5"
            android:autofillHints=""
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/ic_lock_edit_text"
            android:drawableLeft="@drawable/ic_lock_edit_text"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/reg_phone"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:alpha="0.5"
            android:autofillHints=""
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/ic_phone_edit_text"
            android:drawableLeft="@drawable/ic_phone_edit_text"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/reg_birth"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:alpha="0.5"
            android:autofillHints=""
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/ic_date_edit_text"
            android:drawableLeft="@drawable/ic_date_edit_text"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        android:gravity="center">


        <RadioButton
            android:id="@+id/MaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            tools:ignore="RelativeOverlap" />

        <RadioButton
            android:id="@+id/FemaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            tools:ignore="RelativeOverlap" />

        <RadioButton
            android:id="@+id/OtherRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            tools:ignore="RelativeOverlap" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:gravity="center">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="314dp"
            android:alpha="0.7"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#FFF"
            android:backgroundTint="#3353B1"
            app:cornerRadius="15dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="273dp"
            tools:layout_editor_absoluteY="424dp" />
    </LinearLayout>
</RelativeLayout>