<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@drawable/back_image"
        android:contentDescription="@string/login_background_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/general_logo"
                android:layout_width="100dp"
                android:layout_height="115dp"
                android:layout_gravity="top"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/movies_icon"
                app:tint="#3853A3"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#7A7777"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="8"
            android:text="@string/movies"
            android:textColor="#3853A3"
            android:textSize="45sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_username_edit_text"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:alpha="0.6"
                android:autofillHints="Please type your username"
                android:background="@drawable/edit_text_style"
                android:drawableStart="@drawable/ic_lock_edit_text"
                android:drawableLeft="@drawable/ic_lock_edit_text"
                android:hint="@string/please_type_your_username"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:alpha="0.6"
                android:autofillHints="Please type your password"
                android:background="@drawable/edit_text_style"
                android:drawableStart="@drawable/ic_email_edit_text"
                android:drawableLeft="@drawable/ic_email_edit_text"
                android:hint="@string/please_type_your_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="@string/login"
            app:cornerRadius="15dp"
            android:textColor="#FFF"
            android:backgroundTint="#3353B1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="273dp"
            tools:layout_editor_absoluteY="424dp" />

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:textColor="#000"
            android:text="@string/forgot_password" />

        <TextView
            android:id="@+id/account_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_facebook_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:contentDescription="@string/facebook_register"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/login_google_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/google_register"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/login_twitter_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/twitter_register"
            app:srcCompat="@drawable/twitter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="670dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/login_sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/design_default_color_primary_variant" />
    </LinearLayout>
</RelativeLayout>