<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SetupFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@drawable/back_image"
        android:contentDescription="@string/login_background_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <Button
            android:id="@+id/setup_actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#3353B1"
            android:text="@string/actors"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/setup_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#3353B1"
            android:text="@string/categories"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/setup_companies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:backgroundTint="#3353B1"
            android:text="@string/companies"
            android:textColor="#FFF"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>