<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/add_actor"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/add_actor"
        android:alpha="0.7"
        android:backgroundTint="#3353B1"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/actor_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/name_"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/actor_surname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/surname"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_marginStart="100dp" />

        <TextView
            android:id="@+id/actor_date_of_birth_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/date_of_birth"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_marginStart="180dp" />

        <TextView
            android:id="@+id/actor_date_of_country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/country_"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_marginStart="300dp" />


    </RelativeLayout>

    <ListView
        android:id="@+id/actor_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent" />
</LinearLayout>
