<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <Button
        android:id="@+id/add_company"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.7"
        android:backgroundTint="#3353B1"
        android:text="@string/add_company"
        android:textColor="#FFF" />

    <LinearLayout
        android:id="@+id/company_add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/add_company_name"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:alpha="0.5"
            android:autofillHints=""
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/add_company_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="#FFF"
            android:layout_marginLeft="20dp"
            android:alpha="0.7"
            android:backgroundTint="#3353B1"
            android:text="@string/add" />
    </LinearLayout>

    <ListView
        android:id="@+id/Company_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_weight="12" />

</LinearLayout>

